# TiQO

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
QontoOdooDjango/: launch.sh  manage.py
QontoOdooDjango/QontoOdooDjango/: asgi.py  settings.py  urls.py  wsgi.py
QontoOdooDjango/front/: apps.py
QontoOdooDjango/qonto_parser/: admin.py  apps.py  models.py  qonto_api.py  serializers.py  views.py
QontoOdooDjango/qonto_parser/migrations/: 0001_initial.py
QontoOdooDjango/qonto_parser/templates/: index.html
QontoOdooDjango/softui_dashboard/: apps.py
QontoOdooDjango/tiqo_parser/: admin.py  apps.py  models.py  odoo_api.py  qonto_api.py  serializers.py  urls.py  views.py
QontoOdooDjango/tiqo_parser/migrations/: 0001_initial.py  0002_remove_transaction_amount.py  0002_rename_odoo_api_configuration_odoo_apikey_and_more.py  0003_alter_transaction_card_last_digits_and_more.py  0003_configuration_odoo_dbname.py  0004_accountjournal_delete_account.py  0004_alter_transaction_vat_amount_cents.py  0005_accountanalyticgroup_accountanalyticaccount.py  0005_alter_transaction_initiator_id.py  0006_alter_transaction_vat_amount_cents.py  0007_transaction_side.py  0008_alter_contact_email_alter_transaction_initiator_id.py  0009_rename_name_contact_first_name_contact_last_name.py  0010_attachment.py  0011_rename_file_attachment_filepath.py  0012_remove_attachment_transaction_and_more.py  0013_attachment_url_qonto_alter_attachment_filepath.py  0014_externaltransfer.py  0015_externaltransfer_transaction.py  0016_contact_type.py  0019_odoocontact.py  (+14 more)
(+6 files in other folders)
